--- a/views/lists.ejs
+++ b/views/lists.ejs
@@ -4,19 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
 <body>
-    <h1><%= day %></h1>
 
-    <ul>
+    <div class="box" id="heading">
+        <h1><%= day %></h1>
+    </div>
+    
+    <div class="box">
         <% for( var i=0; i<newListItems.length; i++){ %>
-            <li><%= newListItems[i] %></li>
-        <% } %>
-    </ul>
-    <form action="/" method="POST">
-        <input type="text" name="newItem">
-        <button type="submit" name="button">Add</button>    
-    </form>
+        
+            <div class="item">
+                <input type="checkbox">
+                <p><%= newListItems[i] %></p>
+            </div>
+            <% } %>
+        <div>
+            <form action="/" method="POST" class="item">
+                <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
+                <button type="submit" name="button">+</button>    
+            </form>
+        </div>
+    </div>
+
 </body>
 </html>  
