--- a/views/lists.ejs
+++ b/views/lists.ejs
@@ -10,7 +10,7 @@
 <body>
 
     <div class="box" id="heading">
-        <h1><%= day %></h1>
+        <h1><%= listTitle %></h1>
     </div>
     
     <div class="box">
