--- a/views/lists.ejs
+++ b/views/lists.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <title>To-Do List</title>
 </head>
 <body>
 
@@ -24,7 +24,7 @@
         <div>
             <form action="/" method="POST" class="item">
                 <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
-                <button type="submit" name="button">+</button>    
+                <button type="submit" name="list" value=<%= listTitle %>>+</button>    
             </form>
         </div>
     </div>
