--- a/views/lists.ejs
+++ b/views/lists.ejs
@@ -14,14 +14,13 @@
     </div>
     
     <div class="box">
-        <% for( var i=0; i<newListItems.length; i++){ %>
-        
+        <% newListItems.forEach(function(i){ %>
             <div class="item">
                 <input type="checkbox">
-                <p><%= newListItems[i] %></p>
+                <p><%= i.name %></p>
             </div>
-            <% } %>
-        <div>
+        <% }); %>
+       
             <form action="/" method="POST" class="item">
                 <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
                 <button type="submit" name="list" value=<%= listTitle %>>+</button>    
