--- a/views/lists.ejs
+++ b/views/lists.ejs
@@ -15,10 +15,13 @@
     
     <div class="box">
         <% newListItems.forEach(function(i){ %>
+        <form action="/delete" method='post'>
+
             <div class="item">
-                <input type="checkbox">
+                <input type="checkbox" name="checkbox" value="<%=i._id%> " onChange="this.form.submit()">
                 <p><%= i.name %></p>
             </div>
+        </form>
         <% }); %>
        
             <form action="/" method="POST" class="item">
