--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,13 +2,13 @@
 
 html {
   background-color: #E4E9FD;
-  background-image: -webkit-linear-gradient(65deg, #A683E3 50%, #E4E9FD 50%);
+  background-image: -webkit-linear-gradient(65deg, #FCFCB4 50%, #E4E9FD 50%);
   min-height: 1000px;
   font-family: 'Itim';
 }
 
 h1 {
-  color: #fff;
+  color: black;
   padding: 10px;
 }
 
@@ -21,12 +21,14 @@ h1 {
 }
 
 #heading {
-  background-color: #A683E3;
+  background-color: #FCFCB4;
   text-align: center;
 }
 
+
 .item {
   min-height: 70px;
+  background-color: #FCFCB4;
   display: flex;
   align-items: center;
   border-bottom: 1px solid #F1F1F1;
@@ -38,7 +40,7 @@ h1 {
 
 input:checked+p {
   text-decoration: line-through;
-  text-decoration-color: #A683E3;
+  text-decoration-color: red;
   font-weight: 900;
 }
 
@@ -46,6 +48,9 @@ input[type="checkbox"] {
   margin: 20px;
 }
 
+#checkbox{
+  color:red
+}
 p {
   margin: 0;
   padding: 20px;
@@ -56,7 +61,10 @@ p {
 
 form.item {
   text-align: center;
-  margin-left: 20px;
+  padding-left: 20px;
+}
+.new-items{
+  text-decoration: underline;
 }
 
 button {
@@ -64,7 +72,7 @@ button {
   width: 50px;
   border-radius: 50%;
   border-color: transparent;
-  background-color: #A683E3;
+  background-color: green;
   color: #fff;
   font-size: 30px;
   border-width: 0;
@@ -84,7 +92,7 @@ input[type="text"] {
 
 input[type="text"]:focus {
   outline: none;
-  box-shadow: inset 0 -3px 0 0 #A683E3;
+  box-shadow: inset 0 -3px 0 0 green;
 }
 
 ::placeholder {
