--- a/views/lists.ejs
+++ b/views/lists.ejs
@@ -14,16 +14,16 @@
     </div>
     
     <div class="box">
-        <% newListItems.forEach(function(i){ %>
-        <form action="/delete" method='post'>
-
-            <div class="item">
-                <input type="checkbox" name="checkbox" value="<%=i._id%> " onChange="this.form.submit()">
-                <p><%= i.name %></p>
-            </div>
-        </form>
+        <% newListItems.forEach(function(item){ %>
+            <form action="/delete" method="post">
+                <div class="item">
+                    <input type="checkbox" name="checkbox" id="checkbox" value="<%=item._id%>" onChange="this.form.submit()">
+                    <p class="new-items"><%= item.name %></p>
+                </div>
+            </form>
         <% }); %>
        
+        
             <form action="/" method="POST" class="item">
                 <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
                 <button type="submit" name="list" value=<%= listTitle %>>+</button>    
