--- a/views/lists.ejs
+++ b/views/lists.ejs
@@ -20,6 +20,7 @@
                     <input type="checkbox" name="checkbox" id="checkbox" value="<%=item._id%>" onChange="this.form.submit()">
                     <p class="new-items"><%= item.name %></p>
                 </div>
+                <input type="hidden" name="listName" value="<%= listTitle%>" id="">
             </form>
         <% }); %>
        
